# vectorcade-games

./: .gitignore  Cargo.toml  README.md
asteroids/: Cargo.toml
asteroids/src/: lib.rs  physics.rs  rendering.rs
asteroids/src/entities/: actors.rs  mod.rs  projectiles.rs  ship.rs
asteroids/tests/: asteroids_smoke.rs
battlezone/: Cargo.toml
battlezone/src/: enemies.rs  lib.rs  rendering.rs  world.rs
battlezone/tests/: battlezone_smoke.rs
chess-demo/: Cargo.toml
chess-demo/src/: board.rs  lib.rs  pieces.rs
chess-demo/tests/: chess_demo_smoke.rs
contents/: Cargo.toml
contents/src/: lib.rs
docs/: ai_agent_instructions.md  architecture.md  design.md  plan.md  prd.md  stats.md  status.md
lunar-lander/: Cargo.toml
lunar-lander/src/: lander.rs  lib.rs  physics.rs  rendering.rs  terrain.rs
lunar-lander/tests/: lunar_lander_smoke.rs
pong/: Cargo.toml
pong/src/: drawing.rs  lib.rs  physics.rs
pong/tests/: pong_smoke.rs
tempest/: Cargo.toml
tempest/src/: enemies.rs  lib.rs  rendering.rs  tube.rs
tempest/tests/: tempest_smoke.rs
vectorcade-games/: Cargo.toml
vectorcade-games/src/: lib.rs
