[package]
name = "vectorcade-games"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Game collection wrapper for VectorCade."

[dependencies]
vectorcade-shared = { version = "0.1.0" }
pong = { path = "../pong" }
asteroids = { path = "../asteroids" }
lunar-lander = { path = "../lunar-lander" }
chess-demo = { path = "../chess-demo" }
battlezone = { path = "../battlezone" }
